--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">捷運美食App</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_home">首頁</string>
+    <string name="title_dashboard">探索</string>
+    <string name="title_notifications">設定</string>
     <string name="home_login">透過E-mail登入</string>
     <string name="home_register">註冊新帳號</string>
     <string name="account">電子郵件帳號</string>
@@ -34,4 +34,11 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="storeName">店名</string>
+    <string name="storeAddress">地址</string>
+    <string name="storeDescription">簡介</string>
+    <string name="addConfirm">確認</string>
+    <string name="addStore">新增店家</string>
+    <string name="addStore_Success">新增店家成功</string>
+    <string name="addStore_Fail">新增失敗!請聯絡管理員</string>
 </resources>
