Fix Searching Problems and FireStore Problems. Now they can work fine.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,7 @@
     <string name="title_feed">美食圈</string>
     <string name="title_collection">收藏</string>
     <string name="title_trip">TRIPS</string>
-    <string name="setting">設定</string>
+    <string name="add_store">新增店家</string>
     <string name="notifications">推播</string>
     <string name="aboutUs">關於此APP</string>
     <string name="account">電子信箱</string>
