add search icon on home page. debug something.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,6 +104,7 @@
     <string name="label_download">下載圖片</string>
     <string name="download">下載</string>
     <string name="progress_auth">登入中..</string>
+    <string name="home">首頁</string>
 
 
     <!-- 捷運線 -->
