--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,19 +105,28 @@
     <string name="download">下載</string>
     <string name="progress_auth">登入中..</string>
     <string name="home">首頁</string>
-    <string name="edit_profile_fragment">編輯個人資訊</string>
-    <string name="sign_out_fragment">登出</string>
+
     <string name="changeProfilePhoto">更換大頭貼</string>
     <string name="full_name">使用者名稱</string>
     <string name="auth_failed">登入失敗</string>
     <string name="auth_success">登入成功</string>
     <string name="register_failed">註冊失敗</string>
+
+    <!-- fragment names -->
     <string name="profile_fragment">profile</string>
+    <string name="edit_profile_fragment">編輯個人資訊</string>
+    <string name="sign_out_fragment">sign_out</string>
+    <string name="view_post_fragment">view_post</string>
 
     <!-- Intent Extras -->
 
     <string name="calling_activity">calling_activity</string>
     <string name="selected_image">selected_image</string>
+    <string name="return_to_fragment">return_to_fragment</string>
+    <string name="selected_bitmap">selected_bitmap</string>
+
+    <!-- Bundle arg names -->
+    <string name="activity_number">activity_number</string>
 
     <!-- activity names -->
     <string name="profile_activity">Profile Activity</string>
@@ -130,6 +139,7 @@
     <!-- photo types -->
     <string name="new_photo">new_photo</string>
     <string name="profile_photo">profile_photo</string>
+
 
 
     <string-array name="cities">
